# routers/v1/auth.go
@@ -3,77 +3,40 @@ package v1
 import (
 	"github.com/astaxie/beego/validation"
 	"github.com/gin-gonic/gin"
+	"github.com/gin-gonic/gin/binding"
 	"goods/models"
 	"goods/models/table"
 	"goods/pkg/e"
-	"goods/pkg/logging/serve"
+	logging "goods/pkg/logging/serve"
 	"goods/pkg/util"
 	"net/http"
 	"time"
 )
-// @Summary token获取
-// @Produce  json
-// @Param name query string true "username,password"
-// @Success 200 {string} json "{"code":code,"msg" : e.GetMsg(code),"data":{"token":token,"role":role,"login_time":time.Now()}}"
-// @Failure 400 {string} json "{"code":code,"msg" : e.GetMsg(code)}"
-// @Router /auth [get]
-func GetAuth(c *gin.Context) {
-	username := c.Query("username")
-	password := c.Query("password")
-	valid := validation.Validation{}
-	a := table.Login{Username: username, Password: password}
-	ok, _ := valid.Valid(&a)
-	data := make(map[string]interface{})
-	code := e.INVALID_PARAMS
-	if ok {
-		isExist := models.Check(username, password)
-		if isExist {
-			token, err := util.GenerateToken(username, password)
-			if err != nil {
-				code = e.ERROR_AUTH_TOKEN
-			} else {
-				userId :=models.FindUserId(username,password)
-				role:=models.FindRole(username,password)
-				data["token"] = token
-				data["role"]=role
-				data["login_time"]=time.Now()
-				code = e.SUCCESS
-				models.UpdateSta(userId)
-			}
-		} else {
-			code = e.ERROR_AUTH
-		}
-	} else {
-		for _, err := range valid.Errors {
-			logging.Info(err.Key, err.Message)
-		}
-	}
-	c.JSON(http.StatusOK, gin.H{
-		"code" : code,
-		"msg" : e.GetMsg(code),
-		"data" : data,
-	})
+
+type address struct{
+	UserId  string `json:"user_id"`
+	Address string `json:"address"`
 }
-// @Summary 登录
-// @Produce  json
-// @Param name query string true "username,password"
-// @Success 200 {string} json "{"code":code,"msg" : e.GetMsg(code),	"data":{"login_time":time.Now()}}"
-// @Failure 400 {string} json "{"code":code,"msg" : e.GetMsg(code)}"
-// @Router /login [post]
+
+//登录
 func Login(context *gin.Context){
 	var people table.Login
 	if context.BindJSON(&people)==nil{
 		if models.Check(people.Username,people.Password){
+			token,_ := util.GenerateToken(people.Username, people.Password)
 			userid:=models.FindUserId(people.Username,people.Password)
 			models.UpdateSta(userid)
 			data := make(map[string]interface{})
+			role:=models.FindRole(people.Username,people.Password)
 			code:=e.SUCCESS
+			data["token"]=token
+			data["role"]=role
+			data["user_id"]=userid
 			data["login_time"]=time.Now()
 			context.JSON(http.StatusOK,gin.H{
 				"code":code,
 				"msg" : e.GetMsg(code),
-				"data":data,
-			})
+				"data":data,})
 		}else{
 			code:=e.ERROR
 			context.JSON(http.StatusOK,gin.H{
@@ -83,15 +46,11 @@ func Login(context *gin.Context){
 		}
 	}
 }
-// @Summary 信息查看
-// @Produce  json
-// @Param name query string true "user_id"
-// @Success 200 {string} json "{"code" : code,	"msg" : e.GetMsg(code),	"data":{"user_id":auth.User_id,	"username":auth.Username,	"password":auth.Password,	"phone_number":auth.PhoneNumber,	"gender":auth.Gender,	"email":auth.Email,	"login":auth.Login,	"role":auth.Role,"role_id":auth.RoleId}}"
-// @Failure 400 {string} json "{"code" : code,	"msg" : e.GetMsg(code)}"
-// @Router /profile [get]
+//查看买家信息
 func Profile(context *gin.Context){
-	UserId := context.Query("user_id")
-	auth,isExist := models.Find(UserId)
+	var address address
+	_ = context.ShouldBindBodyWith(&address,binding.JSON)
+	auth,isExist := models.Find(address.UserId)
 	if isExist==false{
 		code:=e.ERROR
 		context.JSON(http.StatusOK, gin.H{
@@ -100,16 +59,18 @@ func Profile(context *gin.Context){
 		})
 	}else{
 		code:=e.SUCCESS
+		var buyer table.Buyer
+		models.Db.First(&buyer,"buyer_id=?",address.UserId)
 		data := make(map[string]interface{})
 		data["user_id"]=auth.UserId
 		data["username"]=auth.Username
 		data["password"]=auth.Password
 		data["phone_number"]=auth.PhoneNumber
 		data["gender"]=auth.Gender
-		data["email"]=auth.Email
 		data["login"]=auth.Login
+		data["last_time"]=auth.LastTime
 		data["role"]=auth.Role
-		data["role_id"]=auth.RoleId
+		data["receive_address"]=buyer.ReceiveAddress
 		context.JSON(http.StatusOK, gin.H{
 			"code" : code,
 			"msg" : e.GetMsg(code),
@@ -118,17 +79,20 @@ func Profile(context *gin.Context){
 		})
 	}
 }
-// @Summary 注册
-// @Produce  json
-// @Param name query string true "username,password,phone_number,gender,email,role"
-// @Success 200 {string} json "{"code":code,"msg" : e.GetMsg(code)}"
-// @Failure 400 {string} json "{"code":code,"msg" : e.GetMsg(code)}"
-// @Router /register [post]
+//注册
 func Register(context *gin.Context){
 	var people table.Login
 	if context.BindJSON(&people)==nil{
 		if models.Check(people.Username,people.Password)==false{
-			models.AddUser(people.Username,people.Password,people.PhoneNumber,people.Gender,people.Email,people.Role)
+			models.AddUser(people.Username,people.Password,people.PhoneNumber,people.Gender,people.Role)
+			userid:=models.FindUserId(people.Username,people.Password)
+			if people.Role=="buyer"{
+				models.AddBuyer(userid)
+			}else if people.Role=="seller"{
+				models.AddSeller(userid)
+			}else{
+				models.AddDriver(userid)
+			}
 			code:=e.SUCCESS
 			context.JSON(http.StatusOK,gin.H{
 				"code":code,
@@ -143,4 +107,76 @@ func Register(context *gin.Context){
 		}
 	}
 }
+//填写/修改收货/发货地址
+func ModifyAddress(context *gin.Context){
+	var address address
+	_ = context.ShouldBindBodyWith(&address,binding.JSON)
+	auth,isExist := models.Find(address.UserId)
+	if isExist==false{
+		code:=e.ERROR
+		context.JSON(http.StatusOK, gin.H{
+			"code" : code,
+			"msg" : e.GetMsg(code),
+		})
+	}else{
+		code:=e.SUCCESS
+		models.ModifyAddress(auth,address.Address)
+		context.JSON(http.StatusOK, gin.H{
+			"code" : code,
+			"msg" : e.GetMsg(code),
+			//"data":auth.UserId,auth.Username,
+		})
+	}
+}
 
+//退出登录
+func LogOut(context *gin.Context){
+	var address address
+	_=context.ShouldBindBodyWith(&address,binding.JSON)
+	auth,isExist:=models.Find(address.UserId)
+	if isExist==false{
+		code:=e.ERROR
+		context.JSON(http.StatusOK,gin.H{
+			"code":code,
+			"msg":e.GetMsg(code),
+		})
+	}else{
+		code:=e.SUCCESS
+		models.Turnstatus(auth.UserId,auth,"False")
+		context.JSON(http.StatusOK,gin.H{
+			"code":code,
+			"msg":e.GetMsg(code),
+		})
+	}
+}
+
+//检查用户名是否重复
+func Duplicate(context *gin.Context){
+	var auth table.Login
+	var people table.Login
+	_=context.BindJSON(&people)
+	models.Db.First(&auth,"username=?",people.Username)
+	valid:=validation.Validation{}
+	valid.Required(auth.Username,people.Username)
+	data := make(map[string]interface{})
+	if valid.HasErrors(){
+		for _,err:=range valid.Errors{
+			logging.Info(err.Key,err.Message)
+		}
+		code:=e.SUCCESS
+		data["isExist"]="False"
+		context.JSON(http.StatusOK,gin.H{
+			"code":code,
+			"msg":e.GetMsg(code),
+			"data":data,
+		})
+	}else{
+		code:=e.SUCCESS
+		data["isExist"]="True"
+		context.JSON(http.StatusOK,gin.H{
+			"code":code,
+			"msg":e.GetMsg(code),
+			"data":data,
+		})
+	}
+}
